# RAG-EVAL-Project

./: RAG_Eval_Paper.ipynb  README.md  development.ipynb  outputs.csv  outputs_with_context.csv  pyproject.toml  requirements.txt
src/rag_eval/metrics/: evaluator.py  prompts.py  retrieval_metrics.py  similarity_metrics.py
src/rag_eval/rag/: embeddings.py  rag.py
src/rag_eval/utils/: client.py
